--- a/.github/workflows/label-issues-real.yml
+++ b/.github/workflows/label-issues-real.yml
@@ -6,8 +6,8 @@ on:
 jobs:
   assign-label:
     runs-on: ubuntu-latest
-    permissions:
-      issues: read
+#    permissions:
+#      issues: read
     steps:
       - name: Assign label
         if: contains(github.event.issue.title, 'bug')
